fix text overflow mixin; update bower version

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -69,7 +69,6 @@
 
 	.text-overflow()
 	{
-		max-width: 100%;
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
